[build-system]
requires = [
	 "hatchling >= 1.26",
	 "frozendict >= 2.3.2",
	 "parsy >= 2.1",
	 "PuLP >= 2.7.0",
	 "python-sat >= 0.1.7.dev15",
	 "pygame >= 2.4.0",
	 "pygame-gui >= 0.6.9",
	 "numpy >= 1.26.4"
	 ]
build-backend = "hatchling.build"

[project]
name = "griddy"
version = "0.2"
authors = [
  { name="Ville Salo", email="vosalo@utu.fi" },
  { name="Ilkka Törmä", email="iatorm@utu.fi" },
]
description = "Python toolbox for analysis of infinite discrete dynamical systems"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ilkka-torma/griddy"
Issues = "https://github.com/ilkka-torma/griddy/issues"

[project.scripts]
griddy = "griddy.griddy.__main__"